# gmail_rule_runner

./: README.md  example.py  pyproject.toml  rules_json_schema.json  sample_rules.json
src/gmail_rule_runner/: Action.py  Condition.py  Rule.py  __init__.py  auth.py
