[project]
name = "gmail_rule_runner"
version = "0.0.1"
authors = [
  { name="prabhakarant", email="prabha.karan.1021@gmail.com" },
]
description = "Small Package to Run Rules in Gmail"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/prabhakaran1021/gmail_rule_runner/"